--- a/ADN/Views/Shared/_Layout.cshtml
+++ b/ADN/Views/Shared/_Layout.cshtml
@@ -3,14 +3,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewBag.Title – приложение ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
     <!-- Angular2 Code -->
-    <base href="/">
-    <link rel="stylesheet" href="styles.css">
+    <base href="/"/>
+    <link rel="stylesheet" href="styles.css"/>
     <!-- Polyfill(s) for older browsers -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
