--- a/ADN/Views/Home/Index.cshtml
+++ b/ADN/Views/Home/Index.cshtml
@@ -9,5 +9,7 @@
         <!-- Angular2 Code -->
         <my-app>Loading...</my-app>
         <!-- Angular2 Code -->
+        <news-app>News loading///</news-app>
+        <news-one-app>///fuck///</news-one-app>
     </div>
 </div>
